<resources>
    <string name="app_name">Drank Bank</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="action_settings">Settings</string>
    <string name="nav_lists">Lists</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_settings">Settings</string>
    <string name="hint_search_drink">Search that drank</string>
    <string name="txt_add">Add</string>
    <string name="txt_cancel">Cancel</string>
    <string name="drink_count_initial">What are you waiting for? Get a drink!</string>
    <string name="drink_count_good">You\'re probably feeling great!</string>
    <string name="drink_count_okay">You should probably slow down.</string>
    <string name="drink_count_bad">Find friends. Sleep on your side.</string>
    <string name="drink_count">You\'ve had %d drinks today.</string>
    <string name="drink_name">Drink name:</string>
    <string name="entry_hint_name">Some awesome drank</string>
    <string name="drink_type">Type:</string>
    <string name="drink_descrp">Description:</string>
    <string name="entry_hint_descrp">It was awesome</string>
    <string name="query_fail">Query failed</string>
    <string name="not_available">Not available</string>
    <string name="splash">This is Drank Bank</string>
    <string name="drink_count_one">You\'ve had 1 drink today.</string>
    <string name="drawer_search">Search</string>
    <string name="user">User</string>
    <string name="log_out">Log Out</string>
    <string name="today">Today</string>
    <string name="favorites">Favorites</string>
    <string name="calendar">Calendar</string>
    <string name="graph">Graph</string>
    <string name="search">Search</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="mario_email">msee@wesleyan.edu</string>
    <string name="mario_password">diduseemario</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string-array name="type_array">
        <item>Beer</item>
        <item>Wine</item>
        <item>Cocktail</item>
        <item>Other</item>
    </string-array>
</resources>
